shell: Fix navigation with annotation already selected in sidebar

This fixes the issue when an annotation is selected in the
sidebar, the user navigates the document, and when if the
user clicks on the same annotation, then nothing happens.
But Evince should go to the page of the annotation selected.

https://bugzilla.gnome.org/show_bug.cgi?id=680880